# tiger-optim

./: README.md  __init__  pyproject.toml
bench/: bench_compare_optim.py  bench_profile_v21.py  plot_bench.py
bench/go_accel/: go.mod  tiger.go
bench/rust_accel/: Cargo.toml
bench/rust_accel/src/: lib.rs
benchmarks/: bench_compare_optim.py  bench_profile_v21.py  plot_bench.py
crates/st-kdsl/: Cargo.toml
crates/st-kdsl/src/: lib.rs  tile.rs
src/tiger_optim/: __init__.py  schedulers.py  tagged.py  tiger.py  triton_kernels.py
src/tiger_optim/accel/: __init__.py  go_backend.py  julia_backend.py  rust_backend.py
tests/: test_accel.py  test_tagged_summary.py  test_tiger_amp.py  test_tiger_helpers.py  test_triton_kernels.py
